--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
 		    <div><img src="images/f-4.png" alt="">菜品创新，活动迭代</div>
 	    </div>
 		<p class="p1">Copyright 1607000231 赵文姣</p>
+		<p class="p1">Copyright 1607000231 赵文姣</p>
     </div>
 </body>
 <script src="js/function.js"></script>
